# pytorch-call-emotion-recognition

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  analyzer.py  audio.py  config.py  errors.py  main.py  model.py  schemas.py
app/static/: app.js  index.html  styles.css
docs/: api.md  architecture.md  model-limitations.md  privacy.md
docs/superpowers/plans/: 2026-07-13-pytorch-call-emotion-recognition.md  2026-07-14-url-audio-analysis.md
docs/superpowers/specs/: 2026-07-13-pytorch-call-emotion-recognition-design.md  2026-07-14-url-audio-analysis-design.md
scripts/: download_model.py  privacy_scan.py  smoke_test_api.py  smoke_test_model.py
tests/: __init__.py  test_analyzer.py  test_api.py  test_audio.py  test_config.py  test_frontend.py  test_privacy.py  test_schemas.py
